--- a/style/blog.css
+++ b/style/blog.css
@@ -74,3 +74,27 @@ a{
     border-radius: 20%;
     opacity: 0.3;
 }
+
+@media all and (max-width: 500px){
+    *{
+        background-color: grey;
+    }
+
+    .back-btn{
+     
+        position: fixed;
+        color: black;
+    }
+        
+    .prof-pic-content{
+        background-color: aqua;
+        background-image: linear-gradient(blue,white);
+    }
+    .write-content{
+        width: 550px;
+    }
+
+
+}
+
+
